started flow py, added prefect

--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "import lxml\n",
+    "#import lxml\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup # Html search tool\n",
-    "import re # Regular expressions"
+    "import re # Regular expressions\n",
+    "from datetime import date"
    ]
   },
   {
@@ -242,28 +243,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Columns must be same length as key",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [57], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m zillow_df[[\u001b[39m\"\u001b[39m\u001b[39maddress\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcity\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mstate_zip\u001b[39m\u001b[39m\"\u001b[39m]] \u001b[39m=\u001b[39m zillow_df[\u001b[39m\"\u001b[39m\u001b[39maddress_full\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m, expand\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m----> 2\u001b[0m zillow_df[[\u001b[39m\"\u001b[39;49m\u001b[39mstate_abrev\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mzip_code\u001b[39;49m\u001b[39m\"\u001b[39;49m]] \u001b[39m=\u001b[39m zillow_df[\u001b[39m\"\u001b[39m\u001b[39mstate_zip\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m, expand\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m zillow_df\n",
-      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/really-estate-mG1FNr6d-py3.10/lib/python3.10/site-packages/pandas/core/frame.py:3965\u001b[0m, in \u001b[0;36mDataFrame.__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3963\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_setitem_frame(key, value)\n\u001b[1;32m   3964\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, (Series, np\u001b[39m.\u001b[39mndarray, \u001b[39mlist\u001b[39m, Index)):\n\u001b[0;32m-> 3965\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_setitem_array(key, value)\n\u001b[1;32m   3966\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(value, DataFrame):\n\u001b[1;32m   3967\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_set_item_frame_value(key, value)\n",
-      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/really-estate-mG1FNr6d-py3.10/lib/python3.10/site-packages/pandas/core/frame.py:4007\u001b[0m, in \u001b[0;36mDataFrame._setitem_array\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   4002\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   4003\u001b[0m     \u001b[39m# Note: unlike self.iloc[:, indexer] = value, this will\u001b[39;00m\n\u001b[1;32m   4004\u001b[0m     \u001b[39m#  never try to overwrite values inplace\u001b[39;00m\n\u001b[1;32m   4006\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(value, DataFrame):\n\u001b[0;32m-> 4007\u001b[0m         check_key_length(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns, key, value)\n\u001b[1;32m   4008\u001b[0m         \u001b[39mfor\u001b[39;00m k1, k2 \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(key, value\u001b[39m.\u001b[39mcolumns):\n\u001b[1;32m   4009\u001b[0m             \u001b[39mself\u001b[39m[k1] \u001b[39m=\u001b[39m value[k2]\n",
-      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/really-estate-mG1FNr6d-py3.10/lib/python3.10/site-packages/pandas/core/indexers/utils.py:401\u001b[0m, in \u001b[0;36mcheck_key_length\u001b[0;34m(columns, key, value)\u001b[0m\n\u001b[1;32m    399\u001b[0m \u001b[39mif\u001b[39;00m columns\u001b[39m.\u001b[39mis_unique:\n\u001b[1;32m    400\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(value\u001b[39m.\u001b[39mcolumns) \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(key):\n\u001b[0;32m--> 401\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mColumns must be same length as key\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    402\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    403\u001b[0m     \u001b[39m# Missing keys in columns are represented as -1\u001b[39;00m\n\u001b[1;32m    404\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(columns\u001b[39m.\u001b[39mget_indexer_non_unique(key)[\u001b[39m0\u001b[39m]) \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(value\u001b[39m.\u001b[39mcolumns):\n",
-      "\u001b[0;31mValueError\u001b[0m: Columns must be same length as key"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>address_full</th>\n",
+       "      <th>price</th>\n",
+       "      <th>count_beds</th>\n",
+       "      <th>count_baths</th>\n",
+       "      <th>sq_ft</th>\n",
+       "      <th>days_on_zillow</th>\n",
+       "      <th>address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state_zip</th>\n",
+       "      <th>state_abrev</th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>date_scraped</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4221 Laurel Ridge Dr, Raleigh, NC 27612</td>\n",
+       "      <td>$1,395,000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2,128</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4221 Laurel Ridge Dr</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27612</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>27612</td>\n",
+       "      <td>2022-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4800 Patton Ridge Ct, Raleigh, NC 27612</td>\n",
+       "      <td>$929,000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3,644</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4800 Patton Ridge Ct</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27612</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>27612</td>\n",
+       "      <td>2022-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3008 Dawnbrook Dr, Raleigh, NC 27604</td>\n",
+       "      <td>$415,000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2,775</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3008 Dawnbrook Dr</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27604</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>27604</td>\n",
+       "      <td>2022-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1415 Beacon Village Dr, Raleigh, NC 27604</td>\n",
+       "      <td>$299,900</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1,076</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1415 Beacon Village Dr</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27604</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>27604</td>\n",
+       "      <td>2022-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5901 Rivercliff Ct, Raleigh, NC 27610</td>\n",
+       "      <td>$375,000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2,200</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5901 Rivercliff Ct</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27610</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>27610</td>\n",
+       "      <td>2022-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>776</th>\n",
+       "      <td>829 Mill Greens Ct, Raleigh, NC 27609</td>\n",
+       "      <td>$434,900</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1,666</td>\n",
+       "      <td>1</td>\n",
+       "      <td>829 Mill Greens Ct</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27609</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>27609</td>\n",
+       "      <td>2022-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>777</th>\n",
+       "      <td>2441 Campus Shore Dr #212, Raleigh, NC 27606</td>\n",
+       "      <td>$459,900</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1,062</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2441 Campus Shore Dr #212</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27606</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>27606</td>\n",
+       "      <td>2022-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>778</th>\n",
+       "      <td>1908 Garner Glen Dr, Raleigh, NC 27603</td>\n",
+       "      <td>$489,000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2,686</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1908 Garner Glen Dr</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27603</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>27603</td>\n",
+       "      <td>2022-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>779</th>\n",
+       "      <td>808 Richmond St, Raleigh, NC 27609</td>\n",
+       "      <td>$1,699,000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3,832</td>\n",
+       "      <td>4</td>\n",
+       "      <td>808 Richmond St</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27609</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>27609</td>\n",
+       "      <td>2022-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>780</th>\n",
+       "      <td>7905 Dukes Dynasty Dr, Raleigh, NC 27615</td>\n",
+       "      <td>$390,000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1,760</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7905 Dukes Dynasty Dr</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27615</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>27615</td>\n",
+       "      <td>2022-11-30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>781 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     address_full       price count_beds  \\\n",
+       "0         4221 Laurel Ridge Dr, Raleigh, NC 27612  $1,395,000          2   \n",
+       "1         4800 Patton Ridge Ct, Raleigh, NC 27612    $929,000          5   \n",
+       "2            3008 Dawnbrook Dr, Raleigh, NC 27604    $415,000          4   \n",
+       "3       1415 Beacon Village Dr, Raleigh, NC 27604    $299,900          3   \n",
+       "4           5901 Rivercliff Ct, Raleigh, NC 27610    $375,000          4   \n",
+       "..                                            ...         ...        ...   \n",
+       "776         829 Mill Greens Ct, Raleigh, NC 27609    $434,900          3   \n",
+       "777  2441 Campus Shore Dr #212, Raleigh, NC 27606    $459,900          3   \n",
+       "778        1908 Garner Glen Dr, Raleigh, NC 27603    $489,000          3   \n",
+       "779            808 Richmond St, Raleigh, NC 27609  $1,699,000          5   \n",
+       "780      7905 Dukes Dynasty Dr, Raleigh, NC 27615    $390,000          3   \n",
+       "\n",
+       "    count_baths  sq_ft days_on_zillow                    address      city  \\\n",
+       "0             2  2,128              3       4221 Laurel Ridge Dr   Raleigh   \n",
+       "1             5  3,644              5       4800 Patton Ridge Ct   Raleigh   \n",
+       "2             3  2,775              2          3008 Dawnbrook Dr   Raleigh   \n",
+       "3             2  1,076              8     1415 Beacon Village Dr   Raleigh   \n",
+       "4             3  2,200              5         5901 Rivercliff Ct   Raleigh   \n",
+       "..          ...    ...            ...                        ...       ...   \n",
+       "776           3  1,666              1         829 Mill Greens Ct   Raleigh   \n",
+       "777           2  1,062              2  2441 Campus Shore Dr #212   Raleigh   \n",
+       "778           3  2,686              6        1908 Garner Glen Dr   Raleigh   \n",
+       "779           5  3,832              4            808 Richmond St   Raleigh   \n",
+       "780           4  1,760              2      7905 Dukes Dynasty Dr   Raleigh   \n",
+       "\n",
+       "    state_zip state_abrev zip_code date_scraped  \n",
+       "0    NC 27612          NC    27612   2022-11-30  \n",
+       "1    NC 27612          NC    27612   2022-11-30  \n",
+       "2    NC 27604          NC    27604   2022-11-30  \n",
+       "3    NC 27604          NC    27604   2022-11-30  \n",
+       "4    NC 27610          NC    27610   2022-11-30  \n",
+       "..        ...         ...      ...          ...  \n",
+       "776  NC 27609          NC    27609   2022-11-30  \n",
+       "777  NC 27606          NC    27606   2022-11-30  \n",
+       "778  NC 27603          NC    27603   2022-11-30  \n",
+       "779  NC 27609          NC    27609   2022-11-30  \n",
+       "780  NC 27615          NC    27615   2022-11-30  \n",
+       "\n",
+       "[781 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "zillow_df[[\"address\", \"city\", \"state_zip\"]] = zillow_df[\"address_full\"].str.split(',', expand=True)\n",
-    "#zillow_df[[\"state_abrev\", \"zip_code\"]] = zillow_df[\"state_zip\"].str.split(' ', expand=True)\n",
+    "zillow_df[\"state_zip\"] = zillow_df[\"state_zip\"].str.strip()\n",
+    "zillow_df[[\"state_abrev\", \"zip_code\"]] = zillow_df[\"state_zip\"].str.split(' ', expand=True)\n",
+    "zillow_df[\"date_scraped\"] = date.today()\n",
     "zillow_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zillow_df.to_csv('../data_flows_output/{today}_zillow_scrape_output.csv'.format(today=date.today()), header=True)"
    ]
   }
  ],
